--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div id="text">
-		<b>"My intro to Git and colab"</b>
+		<p><b>"My intro to Git and colab"</b></p>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
